--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
     [currentMobile]="currentMobile"
     [currentPrice]="currentPrice"
   ></app-header>
-  <app-count [count]="devices.length"></app-count>
+  <app-count [count]="devices.length" ></app-count>
+  <p *ngIf="devices.length === 0" class="nocards">No Cards</p>
   <div class="cardContainer">
     <app-mobile-card
     *ngFor="let device of devices"
