--- a/src/app/mobile-card/mobile-card.component.html
+++ b/src/app/mobile-card/mobile-card.component.html
@@ -1,12 +1,43 @@
-<div class="cardwrapper" (dblclick)="update(mobileData.name, mobileData.price)">
+<div 
+    class="cardwrapper" 
+    (dblclick)="update(mobileData.name, mobileData.price)"
+    (dblclick)="active($event)"
+    >
     <div class="head">
         <h2>{{ mobileData.name }}</h2>
-        <button (click)="delete(mobileData)">Remove</button>
+        <button (click)="delete(mobileData)" #button>Remove</button>
     </div>
     <div class="grid-container">
         <div class="item">
         <label>Price: </label>
-        <label>{{ mobileData.price }}</label>
+        <label 
+            *ngIf="newPrice == '' "
+            >{{ mobileData.price }}</label>
+        &nbsp;
+        <i 
+            *ngIf="updateAmount == false" 
+            class="material-icons edit" 
+            style="font-size:14px;" 
+            (click)="edit()"
+        >
+            edit
+        </i>
+        <input 
+            type="text"
+            class="updatePrice"
+            placeholder="price"
+            style="border-top: none; border-left: none; border-right: none;"
+            *ngIf="updateAmount == true"
+            [(ngModel)]="mobileData.price"
+        >
+        <i 
+            *ngIf="updateAmount == true" 
+            class="material-icons edit" 
+            style="font-size:16px; font-weight: bold;"
+            (click)="edit()" 
+        >
+            check
+        </i>
     </div>
     <div class="item">
         <label>RAM: </label>
